tests/framework/engine/build/errors/StreamCancelledError.d.ts
export default class StreamCancelledError extends Error {}
